<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="7dp"
    android:paddingBottom="7dp">

    <ImageView
        android:id="@+id/imv_item"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:paddingTop="25dp"
        android:contentDescription="@string/tela1_foto"
        android:src="@drawable/foto_sombra" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_nome"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/tv_item_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_email"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/tv_item_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_telefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_telefone"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/tv_item_telefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_nascimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_nascimento"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/tv_item_nascimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_detalhe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_detalhe"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/tv_item_detalhe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </TableRow>



            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_objetivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_objetivo"
                    android:textColor="@color/colorAccent"/>

                <TextView
                    android:id="@+id/tv_item_objetivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"/>
            </TableRow>


        </TableLayout>
    </LinearLayout>

</LinearLayout>